--- a/quick_demo.ipynb
+++ b/quick_demo.ipynb
@@ -918,9 +918,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "acf66451-25ce-4b8d-ff15-535eb2446793"
+        "outputId": "3cee2e2d-6896-48e4-e335-9c8b709713de"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -932,38 +932,15 @@
             "/usr/local/lib/python3.10/dist-packages/torch/utils/cpp_extension.py:1964: UserWarning: TORCH_CUDA_ARCH_LIST is not set, all archs for visible cards are included for compilation. \n",
             "If this is not desired, please set os.environ['TORCH_CUDA_ARCH_LIST'].\n",
             "  warnings.warn(\n",
-            "/content/video-retalking/third_part/GPEN/align_faces.py:251: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-            "  if align_type is 'cv2_affine':\n",
-            "/content/video-retalking/third_part/GPEN/align_faces.py:254: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-            "  elif align_type is 'cv2_rigid':\n",
-            "/content/video-retalking/third_part/GPEN/align_faces.py:257: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-            "  elif align_type is 'affine':\n",
             "Traceback (most recent call last):\n",
             "  File \"/content/video-retalking/inference.py\", line 16, in <module>\n",
             "    from third_part.GPEN.gpen_face_enhancer import FaceEnhancement\n",
-            "  File \"/content/video-retalking/third_part/GPEN/gpen_face_enhancer.py\", line 11, in <module>\n",
-            "    from utils.inference_utils import Laplacian_Pyramid_Blending_with_mask\n",
-            "  File \"/content/video-retalking/utils/inference_utils.py\", line 5, in <module>\n",
-            "    from models import load_network, load_DNet\n",
-            "  File \"/content/video-retalking/models/__init__.py\", line 2, in <module>\n",
-            "    from models.DNet import DNet\n",
-            "  File \"/content/video-retalking/models/DNet.py\", line 10, in <module>\n",
-            "    from models.base_blocks import LayerNorm2d, ADAINHourglass, FineEncoder, FineDecoder\n",
-            "  File \"/content/video-retalking/models/base_blocks.py\", line 9, in <module>\n",
-            "    from basicsr.archs.arch_util import default_init_weights\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/basicsr/__init__.py\", line 4, in <module>\n",
-            "    from .data import *\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/basicsr/data/__init__.py\", line 22, in <module>\n",
-            "    _dataset_modules = [importlib.import_module(f'basicsr.data.{file_name}') for file_name in dataset_filenames]\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/basicsr/data/__init__.py\", line 22, in <listcomp>\n",
-            "    _dataset_modules = [importlib.import_module(f'basicsr.data.{file_name}') for file_name in dataset_filenames]\n",
-            "  File \"/usr/lib/python3.10/importlib/__init__.py\", line 126, in import_module\n",
-            "    return _bootstrap._gcd_import(name[level:], package, level)\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/basicsr/data/realesrgan_dataset.py\", line 11, in <module>\n",
-            "    from basicsr.data.degradations import circular_lowpass_kernel, random_mixed_kernels\n",
-            "  File \"/usr/local/lib/python3.10/dist-packages/basicsr/data/degradations.py\", line 8, in <module>\n",
-            "    from torchvision.transforms.functional_tensor import rgb_to_grayscale\n",
-            "ModuleNotFoundError: No module named 'torchvision.transforms.functional_tensor'\n"
+            "  File \"/content/video-retalking/third_part/GPEN/gpen_face_enhancer.py\", line 10, in <module>\n",
+            "    from align_faces import warp_and_crop_face, get_reference_facial_points\n",
+            "  File \"/content/video-retalking/third_part/GPEN/align_faces.py\", line 251\n",
+            "    if align_type || 'cv2_affine':\n",
+            "                   ^\n",
+            "SyntaxError: invalid syntax\n"
           ]
         }
       ]
